--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
     </style>
 </head>
 <body>
+
     <div id="auth-screen">
         <div style="background:var(--card-bg); padding:30px; border-radius:24px; text-align:center; max-width:350px; margin:auto; border:1px solid var(--border);">
             <h2 style="color:var(--blue)">TheoLib Login</h2>
@@ -95,21 +96,40 @@
             <h2 id="p-name">Name</h2>
             <div id="p-role-box" style="background:var(--blue); display:inline-block; padding:5px 15px; border-radius:20px; font-size:11px; font-weight:800; margin-bottom:15px;">ROLE</div>
             <div style="text-align:left; font-size:13px; margin-bottom:20px; border-top:1px solid var(--border); padding-top:15px;">
-                <p><b>College ID:</b> <span id="p-coll-id-display"></span></p>
-                <p><b>User ID:</b> <span id="p-user-id-display"></span></p>
+                <p><b>College ID:</b> <span id="p-coll-id-display">--</span></p>
+                <p><b>User ID:</b> <span id="p-user-id-display">--</span></p>
             </div>
             <button onclick="toggleProfile()" class="btn-preview">Back</button>
             <button onclick="handleLogout()" style="background:red; margin-top:10px;" class="btn-preview">Logout</button>
         </div>
     </div>
 
+    <div id="search-results-overlay" class="hidden">
+        <div style="background:var(--card-bg); padding:20px; border-bottom:1px solid var(--border);">
+            <div style="display:flex; justify-content:space-between; align-items:center;"><h3>🔎 Results</h3><button onclick="closeView('search-results-overlay')" class="btn-preview">Back</button></div>
+            <div class="typing-mirror">Searching for: <span id="mirror-text">...</span></div>
+        </div>
+        <div id="search-results-list" style="padding:20px;"></div>
+    </div>
+
+    <div id="contact-modal" class="full-modal hidden">
+        <div class="glass-card" style="max-width:400px; margin:auto;">
+            <h3>Contact Administrator</h3>
+            <textarea id="con-msg" placeholder="Your Message..." style="height:120px;"></textarea>
+            <button class="btn-preview" style="width:100%; padding:15px;" onclick="submitContact()">Send Message</button>
+            <button class="btn-preview" style="background:none; border:1px solid var(--border); width:100%; margin-top:10px;" onclick="closeContactModal()">Cancel</button>
+        </div>
+    </div>
+
+    <div id="full-lib-view" class="hidden"><div style="display:flex; justify-content:space-between; padding:20px;"><h3>📚 Books</h3><button onclick="closeView('full-lib-view')" class="btn-preview">Back</button></div><div id="full-book-list" style="padding:20px;"></div></div>
+    <div id="borrow-view" class="hidden"><div style="display:flex; justify-content:space-between; padding:20px;"><h3>📥 Issued</h3><button onclick="closeView('borrow-view')" class="btn-preview">Back</button></div><div id="borrow-list" style="padding:20px;"></div></div>
     <div id="reader-overlay" class="hidden"><div style="background:#1e293b; padding:15px; display:flex; justify-content:space-between;"><span id="reader-title"></span><button onclick="closeReader()" style="background:red; color:white; border:none; padding:8px 12px; border-radius:5px;">Exit</button></div><iframe id="pdf-frame" style="width:100%; height:100%; border:none;"></iframe></div>
 
     <script>
         const firebaseConfig = { apiKey: "AIzaSyBBZ5Yvd7XH4lymNq2vIp-cwxPba55upWg", authDomain: "theolib.in", projectId: "student-library-4a4e7", storageBucket: "student-library-4a4e7.firebasestorage.app", messagingSenderId: "827419448917", appId: "1:827419448917:web:4b0d1084e6f1fe1b2566dc" };
         firebase.initializeApp(firebaseConfig); const db = firebase.firestore();
-        let currentUser = null; let sessionSeconds = 0; let isActive = true;
-        let trackingState = { activeDocId: null, type: "Usage" };
+        let currentUser = null; let collegeBooks = []; let sessionSeconds = 0; let isActive = true;
+        let logId = null;
 
         document.addEventListener("visibilitychange", async () => {
             isActive = !document.hidden;
@@ -122,10 +142,21 @@
             const role = document.getElementById('login-role').value, cid = document.getElementById('login-coll-id').value.trim(), uid = document.getElementById('login-user-id').value.trim(), pass = document.getElementById('login-pass').value.trim();
             const snap = await db.collection("users").where("collegeId","==",cid).where("studentId","==",uid).where("password","==",pass).get();
             if(!snap.empty) {
-                currentUser = { uid: snap.docs[0].id, ...snap.docs[0].data() };
+                const u = snap.docs[0].data();
+                if((u.role || 'student') !== role) { alert("Invalid role"); return; }
+                currentUser = { uid: snap.docs[0].id, ...u };
                 document.getElementById('auth-screen').classList.add('hidden'); document.getElementById('dashboard').classList.remove('hidden');
                 initSystem(); await startTracking("Usage", "Dashboard Session");
-            } else alert("Failed");
+            } else alert("Login Failed");
+        }
+
+        async function startTracking(type, activity) {
+            const doc = await db.collection("activity_logs").add({ userId: currentUser.uid, type, activity, startTime: Date.now(), endTime: null });
+            logId = doc.id;
+        }
+
+        async function stopTracking() {
+            if (logId) { await db.collection("activity_logs").doc(logId).update({ endTime: Date.now() }); logId = null; }
         }
 
         function initSystem() { 
@@ -134,20 +165,58 @@
             loadLibrary(); 
         }
 
-        async function startTracking(type, activity) {
-            const log = await db.collection("activity_logs").add({ userId: currentUser.uid, type, activity, startTime: Date.now(), endTime: null });
-            trackingState.activeDocId = log.id;
+        function renderItem(b) {
+            let h = `<div class="book-item"><b>${b.title}</b><br><button class="btn-preview" onclick="openPdfPreview('${b.id}','${b.title}')">Preview</button><button class="btn-preview" style="background:var(--orange)" onclick="borrowBook('${b.id}','${b.title}')">Borrow</button>`;
+            if(currentUser.role === 'faculty') h += `<button class="btn-preview" style="background:var(--purple)" onclick="nominate('${b.id}','${b.title}')">Nominate</button>`;
+            return h + `</div>`;
         }
 
-        async function stopTracking() {
-            if (trackingState.activeDocId) {
-                await db.collection("activity_logs").doc(trackingState.activeDocId).update({ endTime: Date.now() });
-                trackingState.activeDocId = null;
+        function loadLibrary() {
+            db.collection("library_settings").where("allowedColleges","array-contains",currentUser.collegeId).onSnapshot(snap => {
+                collegeBooks = []; const rec = document.getElementById('recent-list'), trend = document.getElementById('trending-list');
+                rec.innerHTML = trend.innerHTML = "";
+                snap.forEach(doc => { 
+                    const b = doc.data(); const bookData = {id: doc.id, ...b}; collegeBooks.push(bookData); 
+                    rec.innerHTML += renderItem(bookData);
+                    if(b.recent) trend.innerHTML += renderItem(bookData);
+                });
+                document.getElementById('top-total').innerText = collegeBooks.length;
+            });
+            db.collection("borrows").where("userId","==",currentUser.uid).onSnapshot(snap => {
+                document.getElementById('top-issued').innerText = snap.size;
+                const list = document.getElementById('borrow-list'); list.innerHTML = "";
+                snap.forEach(doc => { const d = doc.data(); list.innerHTML += `<div class="book-item"><b>${d.title}</b><br><button class="btn-preview" style="background:var(--green)" onclick="openFullPdf('${d.bookId}','${d.title}')">Read Full</button></div>`; });
+            });
+        }
+
+        function mirrorTyping(val) {
+            document.getElementById('mirror-text').innerText = val || "...";
+            if(val.trim().length > 1) {
+                const list = document.getElementById('search-results-list'); list.innerHTML = "";
+                const filtered = collegeBooks.filter(b => b.title.toLowerCase().includes(val.toLowerCase()) || (b.category && b.category.toLowerCase().includes(val.toLowerCase())));
+                filtered.forEach(b => list.innerHTML += renderItem(b));
+                document.getElementById('search-results-overlay').classList.remove('hidden');
             }
         }
 
-        async function handleLogout() { await stopTracking(); location.reload(); }
-        // ... rest of library functions same ...
+        async function nominate(id, t) { await db.collection("admin_messages").add({ type: "Nomination", book: t, user: currentUser.fullName, college: currentUser.collegeId, date: Date.now() }); alert("Sent!"); }
+        async function submitContact() { const m = document.getElementById('con-msg').value; if(!m) return; await db.collection("admin_messages").add({ type: "Helpdesk", college: currentUser.collegeId, message: m, user: currentUser.fullName, date: Date.now() }); alert("Sent!"); closeContactModal(); }
+        async function submitSuggestion() { const s = document.getElementById('feat-suggest').value; if(!s) return; await db.collection("admin_messages").add({ type: "Suggestion", message: s, user: currentUser.fullName, date: Date.now() }); alert("Sent!"); document.getElementById('feat-suggest').value = ""; }
+        async function submitRequest() { const b = document.getElementById('req-book').value; if(!b) return; await db.collection("admin_messages").add({ type: "Request", book: b, user: currentUser.fullName, college: currentUser.collegeId, date: Date.now() }); alert("Sent!"); document.getElementById('req-book').value = ""; }
+
+        function toggleDropdown() { document.getElementById('cat-dropdown').classList.toggle('active'); }
+        function loadCat(cat) { const list = document.getElementById('full-book-list'); list.innerHTML = ""; collegeBooks.filter(b => b.category === cat).forEach(b => list.innerHTML += renderItem(b)); document.getElementById('full-lib-view').classList.remove('hidden'); document.getElementById('cat-dropdown').classList.remove('active'); }
+        function toggleProfile() { document.getElementById('p-name').innerText = currentUser.fullName; document.getElementById('p-role-box').innerText = currentUser.role.toUpperCase(); document.getElementById('p-coll-id-display').innerText = currentUser.collegeId; document.getElementById('p-user-id-display').innerText = currentUser.studentId; document.getElementById('profile-overlay').classList.toggle('hidden'); }
+        function openPdfPreview(id, t) { stopTracking(); startTracking("Online Read", t); document.getElementById('reader-title').innerText = t + " (Preview)"; document.getElementById('pdf-frame').src = `/public/${id}_read_online.pdf`; document.getElementById('reader-overlay').classList.remove('hidden'); }
+        function openFullPdf(id, t) { stopTracking(); startTracking("Borrowed Read", t); document.getElementById('reader-title').innerText = t + " (Full)"; document.getElementById('pdf-frame').src = `/public/${id}.pdf`; document.getElementById('reader-overlay').classList.remove('hidden'); }
+        async function borrowBook(id, t) { await db.collection("borrows").add({ userId: currentUser.uid, bookId: id, title: t, date: Date.now() }); alert("Issued!"); }
+        function closeReader() { stopTracking(); startTracking("Usage", "Dashboard Session"); document.getElementById('reader-overlay').classList.add('hidden'); }
+        function showBorrowView() { document.getElementById('borrow-view').classList.remove('hidden'); }
+        function showFullLibrary() { const list = document.getElementById('full-book-list'); list.innerHTML = ""; collegeBooks.forEach(b => list.innerHTML += renderItem(b)); document.getElementById('full-lib-view').classList.remove('hidden'); }
+        function handleLogout() { stopTracking(); location.reload(); }
+        function showContactModal() { document.getElementById('contact-modal').classList.remove('hidden'); }
+        function closeContactModal() { document.getElementById('contact-modal').classList.add('hidden'); }
+        function closeView(id) { document.getElementById(id).classList.add('hidden'); }
     </script>
 </body>
 </html>
